# wgpu-app

./: .gitignore  Cargo.toml  README.md
assets/: animated.wgsl  depth.wgsl  miniview.wgsl  test.wgsl
src/: app.rs  app2.rs  base.wgsl  input_mapper.rs  lin_alg.rs  main.rs  primitives.rs  wgpu_root.rs  wgpu_text.rs
src/embed_assets/: base.wgsl  text.wgsl
src/wgpu_renderer/: lin_alg.rs  mod.rs  model_loader.rs  primitives.rs  root.rs  text.rs  util.rs
