[package]
name = "wgpu-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version="1.16.0", features=["derive"] }
env_logger = "0.11.3"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = "0.30.0"
